--- a/slides.html
+++ b/slides.html
@@ -343,6 +343,15 @@
       </div>
       <div class='spacer bottom'></div>
     </section>
+    <section class='slide'>
+      <div class='spacer top'></div>
+      <div class='content'>
+        <h1>Slides live here:</h1>
+        
+        <p><code>https://github.com/infews/2013.09.05.GettingAgileWithPivotalTracker</code></p>
+      </div>
+      <div class='spacer bottom'></div>
+    </section>
     <!-- deck.js navigation extension -->
     <a class='deck-prev-link' href='#' title='Previous'>&#8592;</a>
     <a class='deck-next-link' href='#' title='Next'>&#8594;</a>
