Adding a links slide.

--- a/slides.html
+++ b/slides.html
@@ -343,6 +343,20 @@
       </div>
       <div class='spacer bottom'></div>
     </section>
+    <section class='left slide'>
+      <div class='spacer top'></div>
+      <div class='content'>
+        <h1>Links!</h1>
+        
+        <ul>
+        <li><em>Extreme Programming Pocket Guide</em>: http://amzn.to/1a9u7cM</li>
+        <li>Pivotal Labs: http://pivotalabs.com</li>
+        <li>Pivotal Blabs: http://pivotallabs.com/blabs</li>
+        <li>Pivotal Tracker: http://pivotaltracker.com</li>
+        </ul>
+      </div>
+      <div class='spacer bottom'></div>
+    </section>
     <section class='slide'>
       <div class='spacer top'></div>
       <div class='content'>
